Reworked some pins to allow for DC current sense. Re-testing hall sensor pins

--- a/Firmware/solar_lv_motor/solar_lv_motor.ioc
+++ b/Firmware/solar_lv_motor/solar_lv_motor.ioc
@@ -83,40 +83,41 @@ Mcu.Pin1=PH1-OSC_OUT
 Mcu.Pin10=PA4
 Mcu.Pin11=PA5
 Mcu.Pin12=PA6
-Mcu.Pin13=PC4
-Mcu.Pin14=PC5
-Mcu.Pin15=PB0
-Mcu.Pin16=PB1
-Mcu.Pin17=PB10
-Mcu.Pin18=PB12
-Mcu.Pin19=PB13
+Mcu.Pin13=PA7
+Mcu.Pin14=PC4
+Mcu.Pin15=PC5
+Mcu.Pin16=PB0
+Mcu.Pin17=PB1
+Mcu.Pin18=PB10
+Mcu.Pin19=PB12
 Mcu.Pin2=PC0
-Mcu.Pin20=PB14
-Mcu.Pin21=PB15
-Mcu.Pin22=PC7
-Mcu.Pin23=PA8
-Mcu.Pin24=PA9
-Mcu.Pin25=PA10
-Mcu.Pin26=PA11
-Mcu.Pin27=PA12
-Mcu.Pin28=PA15
-Mcu.Pin29=PC11
+Mcu.Pin20=PB13
+Mcu.Pin21=PB14
+Mcu.Pin22=PB15
+Mcu.Pin23=PC7
+Mcu.Pin24=PA8
+Mcu.Pin25=PA9
+Mcu.Pin26=PA10
+Mcu.Pin27=PA11
+Mcu.Pin28=PA12
+Mcu.Pin29=PA15
 Mcu.Pin3=PC1
-Mcu.Pin30=PB3
-Mcu.Pin31=PB6
-Mcu.Pin32=VP_SYS_VS_Systick
-Mcu.Pin33=VP_TIM1_VS_ControllerModeTrigger
-Mcu.Pin34=VP_TIM1_VS_ClockSourceITR
-Mcu.Pin35=VP_TIM1_VS_no_output4
-Mcu.Pin36=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin37=VP_MotorControl_MC_ENABLED
+Mcu.Pin30=PC11
+Mcu.Pin31=PB3
+Mcu.Pin32=PB6
+Mcu.Pin33=VP_SYS_VS_Systick
+Mcu.Pin34=VP_TIM1_VS_ControllerModeTrigger
+Mcu.Pin35=VP_TIM1_VS_ClockSourceITR
+Mcu.Pin36=VP_TIM1_VS_no_output4
+Mcu.Pin37=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin38=VP_MotorControl_MC_ENABLED
 Mcu.Pin4=PC2
 Mcu.Pin5=PC3
 Mcu.Pin6=PA0-WKUP
 Mcu.Pin7=PA1
 Mcu.Pin8=PA2
 Mcu.Pin9=PA3
-Mcu.PinsNb=38
+Mcu.PinsNb=39
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F446RETx
@@ -626,7 +627,7 @@ NVIC.TIM2_IRQn=true\:3\:0\:false\:true\:false\:4\:true\:true
 NVIC.USART2_IRQn=true\:3\:1\:true\:true\:false\:5\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:false\:false\:false
 PA0-WKUP.GPIOParameters=GPIO_Label
-PA0-WKUP.GPIO_Label=POT2_TEMP
+PA0-WKUP.GPIO_Label=DC_ISENSE
 PA0-WKUP.Locked=true
 PA0-WKUP.Signal=ADCx_IN0
 PA1.GPIOParameters=GPIO_Label
@@ -647,11 +648,10 @@ PA12.GPIOParameters=GPIO_Label
 PA12.GPIO_Label=FLT_OUT
 PA12.Locked=true
 PA12.Signal=GPIO_Output
-PA15.GPIOParameters=GPIO_Speed,GPIO_Label
-PA15.GPIO_Label=M1_HALL_H1
-PA15.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PA15.GPIOParameters=GPIO_Label
+PA15.GPIO_Label=HALLA_OUT
 PA15.Locked=true
-PA15.Signal=S_TIM2_CH1_ETR
+PA15.Signal=GPIO_Output
 PA2.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PA2.GPIO_Label=UART_TX
 PA2.GPIO_Mode=GPIO_MODE_AF_PP
@@ -682,6 +682,10 @@ PA6.GPIO_PuPd=GPIO_PULLDOWN
 PA6.Locked=true
 PA6.Mode=Activate-Break-Input
 PA6.Signal=TIM1_BKIN
+PA7.GPIOParameters=GPIO_Label
+PA7.GPIO_Label=POT2_TEMP
+PA7.Locked=true
+PA7.Signal=ADCx_IN7
 PA8.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
 PA8.GPIO_Label=M1_PWM_UH
 PA8.GPIO_PuPd=GPIO_PULLDOWN
@@ -702,11 +706,10 @@ PB1.GPIOParameters=GPIO_Label
 PB1.GPIO_Label=DRV_DIS
 PB1.Locked=true
 PB1.Signal=GPIO_Output
-PB10.GPIOParameters=GPIO_Speed,GPIO_Label
-PB10.GPIO_Label=M1_HALL_H3
-PB10.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PB10.GPIOParameters=GPIO_Label
+PB10.GPIO_Label=HALLC_OUT
 PB10.Locked=true
-PB10.Signal=S_TIM2_CH3
+PB10.Signal=GPIO_Output
 PB12.GPIOParameters=GPIO_Label
 PB12.GPIO_Label=MTR_OC
 PB12.Locked=true
@@ -732,11 +735,10 @@ PB15.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB15.Locked=true
 PB15.Mode=PWM Generation3 CH3 CH3N
 PB15.Signal=TIM1_CH3N
-PB3.GPIOParameters=GPIO_Speed,GPIO_Label
-PB3.GPIO_Label=M1_HALL_H2
-PB3.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PB3.GPIOParameters=GPIO_Label
+PB3.GPIO_Label=HALLB_OUT
 PB3.Locked=true
-PB3.Signal=S_TIM2_CH2
+PB3.Signal=GPIO_Output
 PB6.GPIOParameters=GPIO_Label
 PB6.GPIO_Label=HV_OV
 PB6.Locked=true
@@ -872,6 +874,8 @@ SH.ADCx_IN15.0=ADC1_IN15,IN15
 SH.ADCx_IN15.ConfNb=1
 SH.ADCx_IN4.0=ADC2_IN4,IN4
 SH.ADCx_IN4.ConfNb=1
+SH.ADCx_IN7.0=ADC1_IN7,IN7
+SH.ADCx_IN7.ConfNb=1
 SH.ADCx_IN8.0=ADC1_IN8,IN8
 SH.ADCx_IN8.ConfNb=1
 SH.COMP_DAC2_group.0=DAC_OUT2,DAC_OUT2
@@ -882,12 +886,6 @@ SH.S_TIM1_CH2.0=TIM1_CH2,PWM Generation2 CH2 CH2N
 SH.S_TIM1_CH2.ConfNb=1
 SH.S_TIM1_CH3.0=TIM1_CH3,PWM Generation3 CH3 CH3N
 SH.S_TIM1_CH3.ConfNb=1
-SH.S_TIM2_CH1_ETR.0=TIM2_CH1,Xored_Inputs_Hall_Sensor_Interface
-SH.S_TIM2_CH1_ETR.ConfNb=1
-SH.S_TIM2_CH2.0=TIM2_CH2,Xored_Inputs_Hall_Sensor_Interface
-SH.S_TIM2_CH2.ConfNb=1
-SH.S_TIM2_CH3.0=TIM2_CH3,Xored_Inputs_Hall_Sensor_Interface
-SH.S_TIM2_CH3.ConfNb=1
 TIM1.BreakPolarity=TIM_BREAKPOLARITY_HIGH
 TIM1.BreakState=TIM_BREAK_ENABLE
 TIM1.Channel-PWM\ Generation1\ CH1\ CH1N=TIM_CHANNEL_1
@@ -923,8 +921,7 @@ TIM1.Pulse-PWM\ Generation3\ CH3=((PWM_PERIOD_CYCLES) / 4)
 TIM1.Pulse-PWM\ Generation4\ No\ Output=(((PWM_PERIOD_CYCLES) / 2) - (HTMIN))
 TIM1.RepetitionCounter=(REP_COUNTER)
 TIM1.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
-TIM2.IC1Filter=M1_HALL_IC_FILTER
-TIM2.IPParameters=IC1Filter,Period
+TIM2.IPParameters=Period
 TIM2.IPParametersWithoutCheck=Period,IC1Filter
 TIM2.Period=M1_HALL_TIM_PERIOD
 USART2.BaudRate=115200
